--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -15,14 +16,14 @@
         android:theme="@style/Theme.MyChatApp"
         tools:targetApi="31">
         <activity
-            android:name=".a2_profil.A22_ChangePasswordActivity"
+            android:name=".a0_splash_screen.a2_profil.A22_ChangePasswordActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".a2_profil.A21_ProfilActvity"
+            android:name=".a0_splash_screen.a2_profil.A21_ProfilActvity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
